# Marlins_Data_Science_Project

./: .dockerignore  .env.dev  .gitignore  =5.0.0  Dockerfile  README.md  docker-compose.yml  modularized_notebook copy.ipynb  modularized_notebook.ipynb  pyproject.toml  results.txt  tasks.py  test_jax_gpu.dockerfile
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  environment.yml  gpu_verify.py  jags_verify.py  pyjags_patch.py
archive/: Dockerfile.fix  diagnose_jax_issues.py  dump_kernel_stacks.py  fix_cudnn_compatibility.sh  fix_jax_memory.py  jax_gpu_diagnostics.py  jax_issue_template.md  jax_memory_fix.py  jax_memory_fix_module.py  jax_memory_test.py  modularized_notebook.ipynb  quick_memory_test.py  run_dashboard.py  run_tests_with_fix.py  test_cudnn.py  test_fixed_memory.py  test_hierarchical_memory.py  test_jax_gpu_memory.py  test_jax_memory_module.py  test_kernel_stability.py  test_memory_monitor.py  upgrade_deps.sh
data/git_images/: feature_importances.html  regress_stats.html  shap_explainer.html
data/predictions/: exitvelo_predictions_2024.csv
docs/: jax_gpu_memory_notes.txt  jax_memory_optimization.md
gpu_testing/: 5.0.0'  GETTING_STARTED.md  README.md  gpu_test.py  pymc_jax_example.py  pymc_simple_example.py  run_gpu_benchmark.cmd  run_hierarchical.py  run_hierarchical_direct.bat  run_hierarchical_direct.py  run_hierarchical_gpu.bat  run_jax_gpu.bat  run_jax_gpu.sh  run_pymc_gpu.ps1
marlins_data_science.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: predict_2024.py  run_explainer_dash.py  train.py  train_hierarchical.py
src/data/: ColumnSchema.py  load_data.py
src/features/: data_prep.py  eda.py  feature_engineering.py  feature_normalization.py  feature_selection.py  preprocess.py
src/marlins_data_science.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/models/: baseline.py  bayesian_alternatives.py  bayesian_alternatives_sample_data.py  gbm.py  hierarchical.py  hierarchical_cpu.py  hierarchical_predict.py  hierarchical_utils.py  linear.py  mixed.py  model_shap_reports.py
src/utils/: README_JAX_MEMORY.md  bayesian_explainability.py  bayesian_metrics.py  dash_compat.py  dash_utils.py  gbm_utils.py  helpers.py  hierarchical_utils.py  jax_gpu_utils.py  jax_memory_fix_module.py  jax_memory_monitor.py  jax_memory_test.py  posterior.py  shap_utils.py  (+1 more)
tests/: conftest.py  pytests_nb.ipynb  test.py  test_dashboard.py  test_gpu_utils.py  test_hierarchical.py  test_jax_memory.py  test_jax_memory_configs.py  test_jax_memory_fix_module.py
text_ideas/: final_project_playbook.txt  modelling_choice.txt  null_handling.txt  section2_dataprep_eda.txt
(+21 files in other folders)
